--- a/views/login.html
+++ b/views/login.html
@@ -45,14 +45,14 @@
 						<div id="profile" class="tab-pane  active">
 							<form action="/login" class="sui-form" method="post">
 								<div class="input-prepend"><span  class="add-on loginname"></span>
-									<input id="prependedInput" name="loginname" type="text" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
+									<input id="prependedInput" name="loginname" value="{{.userName}}" type="text" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
 								</div>
 								<div class="input-prepend"><span class="add-on loginpwd"></span>
 									<input id="prependedInput" name="password" type="password" placeholder="请输入密码" class="span2 input-xfat">
 								</div>
 								<div class="setting">
 									<label class="checkbox inline">
-										<input name="m1" type="checkbox" value="2" checked="">
+										<input name="m1" type="checkbox" value="2"{{.checked}}>
 										记住用户名
 									</label>
 									<span class="forget">忘记密码？</span>
